--- a/11thLauncher/11thLauncher.csproj
+++ b/11thLauncher/11thLauncher.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -79,6 +80,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AddonSyncWindow.xaml.cs">
+      <DependentUpon>AddonSyncWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddonSync\Cryptography.cs" />
+    <Compile Include="AddonSync\Serializer.cs" />
+    <Compile Include="AddonSync\Domain\SyncTreeDirectory.cs" />
+    <Compile Include="AddonSync\Domain\SyncTreeLeaf.cs" />
+    <Compile Include="AddonSync\Domain\SyncTreeNode.cs" />
+    <Compile Include="AddonSync\Domain\SyncTreeNodeList.cs" />
     <Compile Include="LogViewer\Logger.cs" />
     <Compile Include="LogViewer\TextPattern.cs" />
     <Compile Include="LogWindow.xaml.cs">
@@ -88,6 +98,10 @@
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="AboutWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddonSyncWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -201,6 +215,10 @@
   <ItemGroup>
     <Resource Include="Resources\menu_game.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\warning.png" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
