--- a/11thLauncher/packages.config
+++ b/11thLauncher/packages.config
@@ -3,4 +3,5 @@
   <package id="Caliburn.Micro" version="3.0.3" targetFramework="net45" />
   <package id="Caliburn.Micro.Core" version="3.0.3" targetFramework="net45" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
 </packages>
