--- a/11thLauncher/packages.config
+++ b/11thLauncher/packages.config
@@ -5,4 +5,5 @@
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
+  <package id="Resource.Embedder" version="1.2.2" targetFramework="net45" developmentDependency="true" />
 </packages>
